tests/errors/4_type_errors/wrong_expr.ifj16.java
class Main {
    static void run() {
        if (5+4) {}
    }
}
